[gd_scene load_steps=3 format=3 uid="uid://dln885hpaf6kj"]

[ext_resource type="Script" path="res://scripts/shop.gd" id="1_sioke"]
[ext_resource type="AudioStream" uid="uid://bwjenex3ixlq1" path="res://audio/cash.mp3" id="2_ptasl"]

[node name="Shop" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_sioke")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="GridContainer" type="GridContainer" parent="VBoxContainer"]
layout_mode = 2
columns = 4

[node name="Hamburger" type="Button" parent="VBoxContainer/GridContainer"]
layout_mode = 2

[node name="PreWorkout" type="Button" parent="VBoxContainer/GridContainer"]
layout_mode = 2

[node name="ProteinShake" type="Button" parent="VBoxContainer/GridContainer"]
layout_mode = 2

[node name="ChickenRice" type="Button" parent="VBoxContainer/GridContainer"]
layout_mode = 2

[node name="AudioCash" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("2_ptasl")
volume_db = 28.07

[connection signal="pressed" from="VBoxContainer/GridContainer/Hamburger" to="." method="_on_hamburger_pressed"]
[connection signal="pressed" from="VBoxContainer/GridContainer/PreWorkout" to="." method="_on_pre_workout_pressed"]
[connection signal="pressed" from="VBoxContainer/GridContainer/ProteinShake" to="." method="_on_protein_shake_pressed"]
[connection signal="pressed" from="VBoxContainer/GridContainer/ChickenRice" to="." method="_on_chicken_rice_pressed"]
